pkg/kgateway/agentgatewaysyncer/testdata/outputs/backend/backend-default.yaml
Backends:
- key: default/example-backend
  name:
    name: example-backend
    namespace: default
  static:
    host: example.com
    port: 8080
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      backend: default/example-backend
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
