pkg/kgateway/agentgatewaysyncer/testdata/outputs/backend/backend-tls.yaml
Addresses:
- service:
    hostname: mcp-svc.default.svc.cluster.local
    name: mcp-svc
    namespace: default
    ports:
    - servicePort: 80
Backends:
- ai:
    providerGroups:
    - providers:
      - inlinePolicies:
        - auth:
            key:
              secret: sk-openai-primary-key
        name: openai
        openai:
          model: gpt-4o
      - anthropic:
          model: claude-3-opus-20240229
        inlinePolicies:
        - auth:
            key:
              secret: sk-anthropic-primary
        name: anthropic
  key: default/ai-groups
  name:
    name: ai-groups
    namespace: default
- ai:
    providerGroups:
    - providers:
      - anthropic:
          model: claude-3-opus-20240229
        name: backend
  inlinePolicies:
  - auth:
      key:
        secret: sk-anthropic-primary
  key: default/anthropic-single
  name:
    name: anthropic-single
    namespace: default
- key: default/mcp-backend
  mcp:
    targets:
    - backend:
        backend: default/mcp-backend/mcp-static
      name: mcp-static
      protocol: STREAMABLE_HTTP
    - backend:
        port: 80
        service:
          hostname: mcp-svc.default.svc.cluster.local
          namespace: default
      name: mcp-svc-80
      path: /test
      protocol: STREAMABLE_HTTP
  name:
    name: mcp-backend
    namespace: default
- key: default/mcp-backend/mcp-static
  name:
    name: mcp-backend
    namespace: default
  static:
    host: mcp-app.foo
    port: 8000
- ai:
    providerGroups:
    - providers:
      - name: backend
        openai:
          model: gpt-4o
  inlinePolicies:
  - auth:
      key:
        secret: sk-openai-primary-key
  key: default/openai-single
  name:
    name: openai-single
    namespace: default
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Policies:
- backend:
    backendTls:
      hostname: baz
  key: default/ai-tls-all-groups:backend-tls:default/ai-groups
  name:
    kind: BackendTLSPolicy
    name: ai-tls-all-groups
    namespace: default
  target:
    backend:
      name: ai-groups
      namespace: default
- backend:
    backendTls:
      hostname: foo
  key: default/ai-tls:backend-tls:default/openai-single
  name:
    kind: BackendTLSPolicy
    name: ai-tls
    namespace: default
  target:
    backend:
      name: openai-single
      namespace: default
- backend:
    backendTls:
      hostname: mcp-svc.foo
      root: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxakNDQWI0Q0NRQ0pjekx5QkJaMUdUQU5CZ2txaGtpRzl3MEJBUXNGQURBdE1SVXdFd1lEVlFRS0RBeGwKZUdGdGNHeGxJRWx1WXk0eEZEQVNCZ05WQkFNTUMyVjRZVzF3YkdVdVkyOXRNQjRYRFRJMU1ETXdOekUwTWpreApObG9YRFRJMk1ETXdOekUwTWpreE5sb3dMVEVWTUJNR0ExVUVDZ3dNWlhoaGJYQnNaU0JKYm1NdU1SUXdFZ1lEClZRUUREQXRsZUdGdGNHeGxMbU52YlRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU4wVTZUVllFQ2t3cW54aDFLdDNkUytMaWFsclhCT1hLYWdqOXRFNTgyVDZkd21xVGhENzVWWlByTktrUm9ZTwphVXpDY3RmRGtVQlhS [...]
  key: default/mcp-tls-ca-cert:backend-tls:default/mcp-svc.default.svc.cluster.local
  name:
    kind: BackendTLSPolicy
    name: mcp-tls-ca-cert
    namespace: default
  target:
    service:
      hostname: mcp-svc.default.svc.cluster.local
      namespace: default
- backend:
    backendTls:
      hostname: mcp-app.foo
  key: default/mcp-tls-system-cert:backend-tls:default/mcp-svc.default.svc.cluster.local/80
  name:
    kind: BackendTLSPolicy
    name: mcp-tls-system-cert
    namespace: default
  target:
    service:
      hostname: mcp-svc.default.svc.cluster.local
      namespace: default
      port: 80
Routes:
- backends:
  - backend:
      backend: default/mcp-backend
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  matches:
  - path:
      pathPrefix: /mcp-backend
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
- backends:
  - backend:
      port: 80
      service:
        hostname: mcp-svc.default.svc.cluster.local
        namespace: default
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.1.0.http
  listenerKey: default/example-gateway.http
  matches:
  - path:
      pathPrefix: /mcp-svc
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
- backends:
  - backend:
      backend: default/ai-groups
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.2.0.http
  listenerKey: default/example-gateway.http
  matches:
  - path:
      pathPrefix: /ai-groups
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
- backends:
  - backend:
      backend: default/openai-single
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.3.0.http
  listenerKey: default/example-gateway.http
  matches:
  - path:
      pathPrefix: /openai-single
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
