pkg/kgateway/agentgatewaysyncer/testdata/outputs/backend/bedrock-backend.yaml
Backends:
- ai:
    providerGroups:
    - providers:
      - bedrock:
          guardrailIdentifier: guardrail-policy-id
          guardrailVersion: guardrail-policy-version
          model: anthropic.claude-3-5-haiku-20241022-v1:0
          region: us-west-2
        name: backend
  inlinePolicies:
  - auth:
      aws:
        implicit: {}
  key: default/bedrock
  name:
    name: bedrock
    namespace: default
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      backend: default/bedrock
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
