pkg/kgateway/agentgatewaysyncer/testdata/outputs/backend/mcp-auth-remote.yaml
Addresses:
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
    - servicePort: 90
Backends:
- mcp:
    targets:
    - backend:
        port: 80
        service: default/example-svc.default.svc.cluster.local
      name: example-svc-80
      protocol: STREAMABLE_HTTP
    - backend:
        port: 90
        service: default/example-svc.default.svc.cluster.local
      name: example-svc-90
      protocol: SSE
  name: default/mcp-backend-selector
- mcp:
    targets:
    - backend:
        backend: default/mcp-backend-static/mcp-target
      name: mcp-target
      path: override-sse
      protocol: STREAMABLE_HTTP
  name: default/mcp-backend-static
- name: default/mcp-backend-static/mcp-target
  static:
    host: mcp-app.default.svc.cluster.local
    port: 8000
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      backend: default/mcp-backend-static
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
- backends:
  - backend:
      backend: default/mcp-backend-selector
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.1.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
