pkg/kgateway/agentgatewaysyncer/testdata/outputs/backend/mcp-backend-selector.yaml
Addresses:
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
    - servicePort: 90
Backends:
- key: default/mcp-backend
  mcp:
    targets:
    - backend:
        port: 80
        service: default/example-svc.default.svc.cluster.local
      name: example-svc-80
      protocol: STREAMABLE_HTTP
    - backend:
        port: 90
        service: default/example-svc.default.svc.cluster.local
      name: example-svc-90
      protocol: SSE
  name:
    name: mcp-backend
    namespace: default
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      backend: default/mcp-backend
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
