pkg/kgateway/agentgatewaysyncer/testdata/outputs/backend/openai-backend.yaml
Backends:
- ai:
    providerGroups:
    - providers:
      - name: backend
        openai:
          model: gpt-4o-mini
  inlinePolicies:
  - auth:
      key:
        secret: mysecretkey
  name: default/openai
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      backend: default/openai
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
